--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
         targetCompatibility = '1.8'
         sourceCompatibility = '1.8'
     }
+    androidExtensions{
+        experimental = true
+    }
 }
 
 dependencies {
@@ -45,6 +48,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
 repositories {
     mavenCentral()
