--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.room:room-runtime:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.5"
+    implementation "androidx.room:room-rxjava2:2.2.5"
     implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
-    implementation "android.arch.persistence.room:rxjava2:2.1.0"
 
     //third party libraries
     implementation 'com.google.code.gson:gson:2.8.6'
