--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+
+    ext {
+        kotlin_version = '1.3.72'
+        appcompat_version = '1.1.0'
+        recylerview_version = '1.1.0'
+        material_version = '1.0.0'
+        constraintlayout_version = '1.1.3'
+        core_ktx_version = '1.3.0'
+        lifecycle_extensions_version = '2.2.0'
+        room_version = '2.2.5'
+        gson_version = '2.8.6'
+        retrofit_version = '2.9.0'
+        picasso_version = '2.71828'
+        rxandroid_version = '2.1.1'
+        rxjava_version = '2.2.17'
+        rxkotlin_version = '2.4.0'
+        timber_version = '4.7.1'
+        junit_version = '4.13'
+        junit_ext_version = '1.1.1'
+        test_version = '1.2.0'
+        espresso_version = '3.2.0'
+    }
+
     repositories {
         google()
         jcenter()
