--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
 
     ext {
         kotlin_version = '1.3.72'
+        gradle_version = '4.0.1'
         appcompat_version = '1.1.0'
+        fragment_version = '1.2.5'
         recylerview_version = '1.1.0'
         material_version = '1.0.0'
         constraintlayout_version = '1.1.3'
@@ -30,11 +30,8 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
