--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         rxandroid_version = '2.1.1'
         rxjava_version = '2.2.17'
         rxkotlin_version = '2.4.0'
+        dagger_version = '2.28.3'
         timber_version = '4.7.1'
         junit_version = '4.13'
         junit_ext_version = '1.1.1'
