--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,13 @@ buildscript {
         rxkotlin_version = '2.4.0'
         dagger_version = '2.28.3'
         timber_version = '4.7.1'
+
         junit_version = '4.13'
+        mockk_version = '1.9.2'
+        arch_core_testing_version = '2.1.0'
+        hamcrest_version = '2.2'
+        robolectric_version = '4.3.1'
+
         junit_ext_version = '1.1.2'
         test_version = '1.3.0'
         espresso_version = '3.3.0'
