add domain module
Signed-off-by: Yogesh Buradkar <yogesh.buradkar@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,12 @@ android {
     buildFeatures {
         viewBinding true
     }
+    buildToolsVersion '30.0.1'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':domain')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
